test/valid/fc36994_TestInstanceOf/InstanceOfTest.plume
/**
 * For testing instanceOf
 * @author 36994, César Santos
 */
class InstanceOfTest extends Object is
  method test : (a: Object) -> Boolean is
    if (a instanceof Boolean) then
      a
    else
      error